--- a/12209460_VincensiusMarcelSuhendar/#18/style.css
+++ b/12209460_VincensiusMarcelSuhendar/#18/style.css
@@ -20,16 +20,6 @@ html{
   scroll-behavior: smooth;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-span{
-    color: #1F3984;
-    font-weight: bold;
-}
 
 body{
     margin: 0;
@@ -43,21 +33,13 @@ body{
 .box{
     width: 100%;
     max-width: 400px;
-    padding: 2rem;
-    border-radius: 10px;
-    box-shadow: 1px 7px 58px rgba(0, 0, 0, 0.1);
-    margin: auto;
-}
-.result{
-    width: 100%;
-    max-width: 400px;
-    padding: 2rem;
+    padding: 2rem 4.5rem 2rem 2rem;
     border-radius: 10px;
     box-shadow: 1px 7px 58px rgba(0, 0, 0, 0.1);
     margin: auto;
 }
 
-input[type="number"]{
+input[type="number"], input[type='text']  {
     width: 100%;
     padding: 10px;
     border: 1px solid black;
@@ -65,6 +47,7 @@ input[type="number"]{
     color: black;
     border-radius: 5px;
     overflow: hidden;
+    margin: 1rem;
 }
 
 input[type="submit"] {
