--- a/12209275_muhammadsatrioramadhan/studykasus_bahanbakar/style.css
+++ b/12209275_muhammadsatrioramadhan/studykasus_bahanbakar/style.css
@@ -1,4 +1,3 @@
-/* Reset some default styles */
 body, h2, p, label, select, input, button {
     margin: 0;
     padding: 0;
@@ -6,7 +5,9 @@ body, h2, p, label, select, input, button {
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background-image: url('https://asset.kompas.com/crops/lNJkPulqNzoSL6YmlVahytJoiH8=/0x61:1024x744/1200x800/data/photo/2022/04/28/626a051ed36ec.png');
+    background-size: cover;
+    background-position: center;
 }
 
 .container {
@@ -54,7 +55,7 @@ button {
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #E9B824;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -63,5 +64,5 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #EE9322;
 }
