--- a/12209460_VincensiusMarcelSuhendar/vue/Latihan Vue.JS/src/assets/base.css
+++ b/12209460_VincensiusMarcelSuhendar/vue/Latihan Vue.JS/src/assets/base.css
@@ -4,9 +4,9 @@
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
 
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
+  --vt-c-black: #BDC1C9;
+  --vt-c-black-soft: #ffffff;
+  --vt-c-black-mute: #ffffff;
 
   --vt-c-indigo: #2c3e50;
 
